tests/files/invalid_files/ruleset_missing_rules.ys
ruleset Details {}

schema {
    message str
    details Details
}